--- a/src/main/java/com/projectgalen/app/jpafrommysql/JPAFromMySQL.form
+++ b/src/main/java/com/projectgalen/app/jpafrommysql/JPAFromMySQL.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.projectgalen.app.jpafrommysql.JPAFromMySQL">
-  <grid id="cbd77" binding="contentPane" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="cbd77" binding="contentPane" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="48" y="54" width="1472" height="998"/>
+      <xy x="48" y="54" width="1350" height="770"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -236,9 +236,9 @@
             </constraints>
             <properties/>
           </component>
-          <component id="4a4e2" class="javax.swing.JLabel">
+          <component id="4a4e2" class="javax.swing.JLabel" binding="basePackageLabel">
             <constraints>
-              <grid row="11" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="12" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <font style="1"/>
@@ -247,7 +247,7 @@
           </component>
           <component id="b6eff" class="javax.swing.JTextField" binding="basePackageField">
             <constraints>
-              <grid row="11" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+              <grid row="12" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
@@ -255,7 +255,7 @@
               <text value="com.jpa.base"/>
             </properties>
           </component>
-          <component id="407f2" class="javax.swing.JLabel">
+          <component id="407f2" class="javax.swing.JLabel" binding="subClassPackageLabel">
             <constraints>
               <grid row="15" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -264,7 +264,7 @@
               <text value="Subclass Package:"/>
             </properties>
           </component>
-          <component id="a00c3" class="javax.swing.JLabel">
+          <component id="a00c3" class="javax.swing.JLabel" binding="subClassPrefixLabel">
             <constraints>
               <grid row="16" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -273,7 +273,7 @@
               <text value="Subclass Prefix:"/>
             </properties>
           </component>
-          <component id="c7c88" class="javax.swing.JLabel">
+          <component id="c7c88" class="javax.swing.JLabel" binding="subClassSuffixLabel">
             <constraints>
               <grid row="17" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -282,28 +282,18 @@
               <text value="Subclass Suffix:"/>
             </properties>
           </component>
-          <component id="a7f9" class="javax.swing.JCheckBox" binding="splitEntitiesIntoBaseCheckBox" default-binding="true">
+          <component id="3b5df" class="javax.swing.JLabel" binding="baseClassPrefixLabel">
             <constraints>
-              <grid row="14" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <font style="1"/>
-              <selected value="true"/>
-              <text value="Split Entities into Base classes and Subclasses."/>
-            </properties>
-          </component>
-          <component id="3b5df" class="javax.swing.JLabel">
-            <constraints>
-              <grid row="12" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="13" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <font style="1"/>
               <text value="Base Class Prefix:"/>
             </properties>
           </component>
-          <component id="678b" class="javax.swing.JLabel">
+          <component id="678b" class="javax.swing.JLabel" binding="baseClassSuffixLabel">
             <constraints>
-              <grid row="13" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="14" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <font style="1"/>
@@ -312,7 +302,7 @@
           </component>
           <component id="7fed6" class="javax.swing.JTextField" binding="baseClassPrefixField">
             <constraints>
-              <grid row="12" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+              <grid row="13" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
@@ -322,7 +312,7 @@
           </component>
           <component id="3c5ff" class="javax.swing.JTextField" binding="baseClassSuffixField">
             <constraints>
-              <grid row="13" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+              <grid row="14" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
@@ -455,60 +445,16 @@
               </component>
             </children>
           </grid>
-        </children>
-      </grid>
-      <grid id="f32e7" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
-        <constraints>
-          <grid row="0" column="2" row-span="2" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties/>
-        <border type="line" title="Tables"/>
-        <children>
-          <grid id="19b5b" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-            <margin top="0" left="0" bottom="0" right="0"/>
+          <component id="92e89" class="javax.swing.JCheckBox" binding="splitEntitiesIntoBaseCheckBox" default-binding="true">
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties/>
-            <border type="none"/>
-            <children>
-              <component id="aa6e7" class="javax.swing.JButton" binding="reloadInfoButton">
-                <constraints>
-                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <icon value="com/projectgalen/app/jpafrommysql/icons/database_refresh.png"/>
-                  <text value="Reload Database"/>
-                </properties>
-              </component>
-              <hspacer id="cfee">
-                <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-              </hspacer>
-            </children>
-          </grid>
-          <scrollpane id="3eac">
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <minimum-size width="350" height="-1"/>
-              </grid>
+              <grid row="11" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <doubleBuffered value="true"/>
+              <font style="1"/>
+              <selected value="true"/>
+              <text value="Split Classes"/>
             </properties>
-            <border type="none"/>
-            <children>
-              <component id="27952" class="javax.swing.JTree" binding="tablesTree">
-                <constraints/>
-                <properties>
-                  <doubleBuffered value="true"/>
-                  <font size="12"/>
-                </properties>
-              </component>
-            </children>
-          </scrollpane>
+          </component>
         </children>
       </grid>
       <grid id="7dea1" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -519,7 +465,7 @@
         <properties/>
         <border type="none"/>
         <children>
-          <grid id="35627" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="35627" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -533,22 +479,30 @@
                     <preferred-size width="200" height="200"/>
                   </grid>
                 </constraints>
-                <properties/>
+                <properties>
+                  <tabLayoutPolicy value="1"/>
+                </properties>
                 <border type="none"/>
                 <children>
-                  <grid id="a27a" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                    <margin top="0" left="0" bottom="0" right="0"/>
-                    <constraints>
-                      <tabbedpane title="Rename"/>
-                    </constraints>
-                    <properties/>
-                    <border type="none"/>
-                    <children/>
-                  </grid>
                   <grid id="47106" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                     <margin top="0" left="0" bottom="0" right="0"/>
                     <constraints>
                       <tabbedpane title="Omit"/>
+                    </constraints>
+                    <properties/>
+                    <border type="none"/>
+                    <children>
+                      <nested-form id="bb857" form-file="com/projectgalen/app/jpafrommysql/components/OmittedForm.form" binding="omittedForm">
+                        <constraints>
+                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                      </nested-form>
+                    </children>
+                  </grid>
+                  <grid id="a27a" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                    <margin top="0" left="0" bottom="0" right="0"/>
+                    <constraints>
+                      <tabbedpane title="Rename"/>
                     </constraints>
                     <properties/>
                     <border type="none"/>
@@ -682,11 +636,6 @@
                 </constraints>
                 <properties/>
               </component>
-              <vspacer id="ae328">
-                <constraints>
-                  <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-                </constraints>
-              </vspacer>
             </children>
           </grid>
         </children>
